add active class for items

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,6 +15,5 @@ nav a{
     color:aquamarine;
     text-decoration: none;
     display: inline-block;
-    width:40px;
-    margin-left:10px;
+    padding:5px;
 }
