--- a/src/components/item-details/item-details.css
+++ b/src/components/item-details/item-details.css
@@ -20,6 +20,7 @@
 }
 .di-img-wrapper img{
     width:100%;
+    object-fit: cover;
 }
 .details-item .list-group-item{
     background-color: rgba(0, 0, 0, 0.4);
